Adding block route and fixing error
